@@ -179,7 +179,7 @@ texi2any: texi2html.temp $(texi2html_formats)
 texi2html.spec: texi2html.spec.in $(top_builddir)/configure
 	@echo Generating $@...
 	@sed -e "s/[@]PACKAGE_VERSION[@]/$(PACKAGE_VERSION)/" \
-	     $< >texi2html.tmp
+	    texi2html.spec.in >texi2html.tmp
 	@cp texi2html.tmp texi2html.spec
 	-@rm texi2html.tmp
 
@@ -194,14 +194,20 @@ $(po_document_dir)/po_document/$(PACKAGE)_document.pot:
 # autogenerated with charset CHARSET (and no command line option for 
 # xgettext to change it), and msgexec doesn't like it and don't do anything.
 # msgexec: present charset "CHARSET" is not a portable encoding name
+# (Actually we write out the value of $<, but that's what it is.)
 i18n/en.thl i18n/: $(po_document_dir)/po_document/$(PACKAGE)_document.pot
 	$(mkdir_p) i18n
 	if test '$(USE_NLS)' = 'yes'; then \
-	  for file in "$(srcdir)/$(po_document_dir)/po_document/"*".po"; do lang=`basename "$$file" .po | sed 's/\..*//'`; \
-		test "$$lang" = 'en' && continue; \
-		msgexec -i "$$file" "$(srcdir)/gettext_to_separated.pl" | "$(srcdir)/separated_to_hash.pl" $$lang > i18n/$$lang.thl; \
+	  for file in "$(srcdir)/$(po_document_dir)/po_document/"*".po"; do \
+  	    lang=`basename "$$file" .po | sed 's/\..*//'`; \
+	    test "$$lang" = 'en' && continue; \
+	    msgexec -i "$$file" "$(srcdir)/gettext_to_separated.pl" \
+	    | "$(srcdir)/separated_to_hash.pl" $$lang > i18n/$$lang.thl; \
 	  done; \
-	  cat $< | sed -e 's/charset=CHARSET/charset=ascii/' | msgexec "$(srcdir)/gettext_to_separated.pl" | "$(srcdir)/separated_to_hash.pl" en > i18n/en.thl; \
+	  cat $(po_document_dir)/po_document/$(PACKAGE)_document.pot \
+	  | sed -e 's/charset=CHARSET/charset=ascii/' \
+	  | msgexec "$(srcdir)/gettext_to_separated.pl" \
+	  | "$(srcdir)/separated_to_hash.pl" en >i18n/en.thl; \
 	else \
 	  cp -p "$(srcdir)/i18n_ref/"*.thl i18n; \
 	fi
@@ -215,10 +221,6 @@ regenerate_i18n_ref: i18n i18n_ref
 	if test '$(USE_NLS)' = 'yes'; then \
 	  cp -p i18n/*.thl i18n_ref; \
 	fi
-
-#i18n/en: $(po_document_dir)/po_document/$(PACKAGE)_document.pot
-#	$(mkdir_p) i18n
-#	msgexec -i $< "$(srcdir)/gettext_to_separated.pl" | "$(srcdir)/separated_to_hash.pl" en > $@
 
 translations.pl: i18n/en.thl
 	$(PERL) manage_i18n.pl -d i18n -o $@ -I . -I $(srcdir) merge
